<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_products" android:icon="@drawable/products_gray"
            android:title="@string/nav_products" />
        <item android:id="@+id/nav_categories" android:icon="@drawable/category_gray"
            android:title="@string/nav_categories" />
        <item android:id="@+id/nav_news" android:icon="@drawable/news_gray"
            android:title="@string/nav_news" />
        <item android:id="@+id/nav_about" android:icon="@drawable/about_gray"
            android:title="@string/nav_about" />
        <item android:id="@+id/nav_cart" android:icon="@drawable/cart_gray"
            android:title="@string/nav_cart" />
        <item android:id="@+id/nav_history" android:icon="@drawable/history_gray"
            android:title="@string/nav_history" />
        <item android:id="@+id/nav_exit" android:icon="@drawable/exit_gray"
            android:title="@string/nav_exit" />
    </group>

</menu>